# github-timeline

./: .gitignore  Cargo.toml  index.html  timeline.js
.github/workflows/: scrape.yml
data/OoTRandomizer/: OoT-Randomizer.json
data/comex/: rust-shlex.json
data/dasgefolge/: gefolge.org.json
data/fenhl/: OoT-Randomizer.json  webloc-cli.json
data/midoshouse/: ootr-multiworld.json
src/: main.rs
