[package]
name = "github-timeline"
version = "0.1.1"
edition = "2021"

[lints.rust]
rust_2018_idioms = "deny"
unsafe_code = "forbid"
unused = "deny"
unused_crate_dependencies = "deny"
unused_import_braces = "deny"
unused_qualifications = "deny"
warnings = "deny"

[profile.release]
lto = true
strip = true

[dependencies]
chrono = { version = "0.4.38", default-features = false, features = ["serde", "clock"] }
clap = { version = "4.5.4", features = ["derive"] }
if_chain = "1.0.2"
itertools = "0.13"
lazy-regex = "3.1.0"
reqwest = { version = "0.12", default-features = false, features = ["charset", "http2", "macos-system-configuration", "rustls-tls"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = { package = "serde_json_path_to_error", version = "0.1" }
thiserror = "1.0.59"
wheel = { git = "https://github.com/fenhl/wheel", branch = "main", features = ["reqwest", "serde", "serde_json", "serde_json_path_to_error"] }
