[package]
name = "github-timeline"
version = "0.1.2"
edition = "2021"
repository = "https://github.com/fenhl/github-timeline"

[lints.rust]
rust_2018_idioms = "deny"
unsafe_code = "forbid"
unused = "deny"
unused_crate_dependencies = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_qualifications = "deny"
warnings = "deny"

[profile.release]
codegen-units = 1
lto = true
strip = true

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
clap = { version = "4", features = ["derive"] }
if_chain = "1"
itertools = "0.13"
lazy-regex = "3"
mimalloc = "0.1"
rand = "0.8"
reqwest = { version = "0.13", default-features = false, features = ["charset", "gzip", "http2", "query", "rustls-no-provider", "system-proxy", "zstd"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
url = { version = "2", features = ["serde"] }
wheel = { git = "https://github.com/fenhl/wheel", branch = "main", features = ["chrono", "reqwest", "serde_json"] }
